--- a/PÁGINA WEB/PAGINAS/CATALOGO/NOVEDADES/novedades.css
+++ b/PÁGINA WEB/PAGINAS/CATALOGO/NOVEDADES/novedades.css
@@ -6,7 +6,13 @@ body{
 img{
 	width: 270px;
 	height: 170px;
+	transition: 1s;
 }
+
+img:hover{
+	transform: scale(1.25);
+}
+
 h1{
 	text-decoration: underline;
 }
@@ -18,3 +24,4 @@ h1{
 #performance{
 	border: 5px solid gold;
 }
+
