--- a/PÁGINA WEB/index.css
+++ b/PÁGINA WEB/index.css
@@ -83,14 +83,15 @@ footer{
 }
 
 .link{
-	padding-left: 300px;
+	padding-left: 150px;
 }
 
 #izquierda{
 	background-color: silver;
 	width: 15%;
-	height: 500px;
+	height: 100%;
 	float: left;
+
 }
 
 #menuIzquierda{
@@ -98,7 +99,11 @@ footer{
 	height: 100%;
 	background-color: silver;
 	color: black;
-	padding-bottom: 550px;
+	padding-bottom: 100px;
+}
+
+#registrate{
+	text-decoration: underline;
 }
 
 .menu{
@@ -121,4 +126,8 @@ footer{
 
 #twitter{
 	width: 20px;
+}
+
+#tablaRegistrarse{
+	padding-bottom: 20px;
 }
